--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-Django==4.2.7
-Pillow==10.1.0
-whitenoise==6.6.0
-gunicorn==21.2.0
+asgiref==3.8.1
+Django==5.2
+gunicorn==23.0.0
+packaging==25.0
+pillow==11.2.1
+sqlparse==0.5.3
+tzdata==2025.2
+whitenoise==6.9.0
